# URASys

./: .gitattributes  .gitignore  README.md  paper.tex  pyproject.toml  requirements.txt  run_app.py
chatbot/config/: models_config.json  system_config.py  utils.py
chatbot/core/: __init__.py
chatbot/core/agents/: agent.py  prompt.py  tools.py
chatbot/core/model_clients/: __init__.py  bm25.py
chatbot/core/model_clients/embedder/: __init__.py  base_class.py  base_embedder.py  exceptions.py
chatbot/core/model_clients/llm/: __init__.py  base_llm.py  exceptions.py
chatbot/core/retriever/: __init__.py  base_class.py  base_retriever.py  document_retriever.py  faq_retriever.py
chatbot/data/bm25/document/: state_dict.json
chatbot/data/bm25/faq/: state_dict.json
chatbot/indexing/context_document/: __init__.py  augment_context.py  extract_context.py  reconstruct_chunk.py  semantic_chunk.py
chatbot/indexing/faq/: __init__.py  augment_document.py  expand_document.py  generate_document.py
chatbot/prompts/indexing/: expand_faq.py  extract_context.py  generate_faq.py  generate_title.py  paraphrase_faq.py  rewrite_chunk.py
chatbot/server/: requirements.txt
chatbot/server/document_server/: server_app.py
chatbot/server/faq_server/: server_app.py
chatbot/server/index_server/: server_app.py
chatbot/utils/: base_class.py  embedding_cache.py  translator.py  vectordb_schema.py
chatbot/utils/database_clients/: __init__.py  base_class.py  base_vector_database.py
chatbot/utils/database_clients/lancedb/: __init__.py  config.py  database.py  exceptions.py  utils.py
chatbot/utils/database_clients/milvus/: __init__.py  config.py  database.py
chatbot/workflow/: build_index.py  chatbot_inference.py
dataset/: Squad2_1000.csv  UniQA_ambious_anonymous.csv
datasets/: README.md  SQuAD2_ambiguous.csv  UniQA_1000.csv  UniQA_1000_anonymous.csv  UniQA_ambiguous.csv  VIMQA_1000.csv  ViQuAD2_ambiguous.csv  Viquad2_1000.csv
environments/: .template.env
frontend/: .env.local.example  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/copilotkit/: route.ts
frontend/app/components/: ToolActions.tsx
scripts/: eval_batch.py  index_baseline.py  index_offline.py  run_app.py
src/urasys/config/: models_config.json  system_config.py  utils.py
src/urasys/utils/: base_class.py  embeddings.py  vectordb_schema.py
src/urasys/workflow/: build_index.py
(+67 files in other folders)
